syntax = "proto3";

package user;

option go_package = "jwtgo/internal/user;user";

service UserService {
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
  rpc GetByEmail (GetByEmailRequest) returns (GetByEmailResponse);
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message Security {
  string password = 1;
  string salt = 2;
  string refresh_token = 3;
}

message User {
  string id = 1;
  string email = 2;
  string role = 3;
  string username = 4;
  string gender = 5;
  Security security = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message GetByIdRequest {
  string id = 1;
}

message GetByIdResponse {
  User user = 1;
}

message GetByEmailRequest {
  string email = 1;
}

message GetByEmailResponse {
  User user = 1;
}

message CreateRequest {
  string email = 1;
  string role = 2;
  string username = 3;
  string gender = 4;
  Security security = 5;
}

message CreateResponse {
  User user = 1;
}

message UpdateRequest {
  string id = 1;
  string email = 2;
  string role = 3;
  string username = 4;
  string gender = 5;
  Security security = 6;
}

message UpdateResponse {
  User user = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  User user = 1;
}
